force-app/main/default/objects/Trigger_Class__mdt/Trigger_Class__mdt.object-meta.xml
<CustomObject>
    <description>Class to be triggered in trigger context, associated to a Trigger mdt record</description>
    <label>Trigger Class</label>
    <pluralLabel>Trigger Classes</pluralLabel>
</CustomObject>