force-app/main/default/objects/Trigger_Class__mdt/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <referenceTo>Trigger__mdt</referenceTo>
    <relationshipLabel>Trigger Classes</relationshipLabel>
    <relationshipName>Trigger_Classes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>