force-app/main/default/objects/Trigger_Class__mdt/listViews/With_Info.listView-meta.xml
<ListView>
    <fullName>With_Info</fullName>
    <columns>MasterLabel</columns>
    <columns>Trigger__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>With Info</label>
</ListView>